Name:                   directed-keys
Version:                0.1.0
Author:                 Jeremy <jeremy.peterson@plowtech.net>
Maintainer:             Jeremy <jeremy.peterson@plowtech.net>
License:                BSD3
License-File:           LICENSE
Synopsis:               Converts a simple key, source, destination, and datetime to a directedkey
Description:            Converts a simple key, source, destination, and datetime to a directedkey
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      DirectedKeys
                        DirectedKeys.Types
  Other-Modules:        DirectedKeys.Internal
  Build-Depends:        base >= 4 && < 5
                      , base64-bytestring == 1.0.0.1
                      , cereal == 0.4.0.1
                      , compressed == 3.10
                      , bytestring == 0.10.0.2
                      , zlib == 0.5.4.1
                      


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test

  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , bytestring == 0.10.0.2
                      , base64-bytestring == 1.0.0.1
                      , QuickCheckxsx
                      , cereal == 0.4.0.1
                      , compressed == 3.10
                      , zlib == 0.5.4.1
                      

Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/directed-keys.git
