Name:                   directed-keys

Version:                0.3.1
Author:                 Jeremy <jeremy.peterson@plowtech.net>
Maintainer:             Jeremy <jeremy.peterson@plowtech.net>
License:                BSD3
License-File:           LICENSE
Synopsis:               Converts a simple key, source, destination, and datetime to a directedkey
Description:            Converts a simple key, source, destination, and datetime to a directedkey
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      DirectedKeys
                        DirectedKeys.Types
                        DirectedKeys.Router
  Other-Modules:        DirectedKeys.Internal
  Build-Depends:        base
                      , base64-bytestring
                      , hashable
                      , cereal
                      , compressed
                      , bytestring
                      , zlib
                      , containers


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test

  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , bytestring
                      , base64-bytestring
                      , serial-test-generators
                      , hashable
                      , QuickCheck
                      , cereal
                      , compressed
                      , zlib
                      , containers
                      , bytestring
                      , base64-bytestring
                      , QuickCheck
                      , cereal
                      , zlib
                      , containers


Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/directed-keys.git
